--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       id: build-raw
       uses: osbuild/bootc-image-builder-action@v0.0.2
       with:
-        config-file: config.toml
+        config-file: ./config.toml
         image: docker-daemon:l3tum/bootcexperiment:latest
         types: |
           raw
