--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,14 +12,18 @@ jobs:
     runs-on: ubuntu-24.04-arm
     steps:
     - uses: actions/checkout@v4
+    - uses: docker/login-action@v3.4.0
+      with:
+        username: l3tum
+        password: ${DOCKER_PAT}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag l3tum/bootcexperiment:latest --build-arg TS_AUTHOR_KEY=${TS_AUTHOR_KEY} --platform linux/arm64
+      run: docker build . --file Dockerfile --tag l3tum/bootcexperiment:latest --build-arg TS_AUTHOR_KEY=${TS_AUTHOR_KEY} --platform linux/arm64 && docker push l3tum/bootcexperiment
     - name: Build RAW
       id: build-raw
       uses: osbuild/bootc-image-builder-action@v0.0.2
       with:
         config-file: ./config.toml
-        image: docker-daemon:l3tum/bootcexperiment:latest
+        image: docker.io/l3tum/bootcexperiment:latest
         types: |
           raw
         rootfs: xfs
